--- a/Chess/Chess.vcxproj
+++ b/Chess/Chess.vcxproj
@@ -139,15 +139,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ChessBase.cpp" />
+    <ClCompile Include="ChessLogic.cpp" />
+    <ClCompile Include="ChessRenderer.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Chess.h" />
+    <ClInclude Include="ChessBase.h" />
+    <ClInclude Include="ChessRenderer.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="ChessRenderer.h" />
+    <ClInclude Include="ChessLogic.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="PieceRender.h" />
+    <ClInclude Include="RenderSettings.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
