--- a/Chess/Chess.vcxproj
+++ b/Chess/Chess.vcxproj
@@ -142,12 +142,16 @@
     <ClCompile Include="ChessBase.cpp" />
     <ClCompile Include="ChessLogic.cpp" />
     <ClCompile Include="ChessRenderer.cpp" />
+    <ClCompile Include="MenuLogic.cpp" />
     <ClCompile Include="MenuRenderer.cpp" />
     <ClCompile Include="GameSectionRenderer.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ButtonRender.h" />
+    <ClInclude Include="CheckboxRender.h" />
     <ClInclude Include="ChessBase.h" />
+    <ClInclude Include="MenuLogic.h" />
     <ClInclude Include="MenuRenderer.h" />
     <ClInclude Include="ChessRenderer.h" />
     <ClInclude Include="Common.h" />
